Update for newer Java API.